--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 
                 </p>
                 <footer>
-                    <h2>Fonte: Relatório-Técnico do grupo</h2>
+                    <article>
+                        <h2>Fonte: Relatório-Técnico do grupo</h2>
+                    </article>
                 </footer>
             </article>
             <article>
@@ -72,7 +74,9 @@
                 <a href="https://www.gov.br/governodigital/pt-br/vlibras/" target="_blank"><img src="/images/libras.png" /></a>
 
                 <footer>
-                    <h2>Essas ferramentas são inclusivas</h2>
+                    <article>
+                        <h2>Essas ferramentas são inclusivas</h2>
+                    </article>
                 </footer>
             </article>
         </section>
