--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <!-- Inserindo o Speech-4N2 em um site -->
     <iframe id="plugin" name="plugin" scrolling="No" src="https://grupo4n2.github.io/windowSpeech4N2.html"></iframe>
-    <button id="botaoHabilitaPlugin" onclick=habilitaPlugin()></button>
+    <iframe id="configuracoes" name="configuracoes" scrolling="No" src="https://grupo4n2.github.io/configuracoes.html"></iframe>
+    <button id="botaoHabilitaPlugin" onclick=parent.habilitaPlugin()></button>
     <input type="hidden" id="acao">
     <script src="https://grupo4n2.github.io/speech4n2.js" type="text/javascript"></script>
     <script src="https://grupo4n2.github.io/funcoesJS.js" type="text/javascript"></script>
@@ -29,6 +30,18 @@
         }
 
         #plugin {
+            border: solid;
+            border-radius: 10px;
+            border-color: var(--corHeader-Footer-Nav);
+            position: fixed;
+            top: 25vw;
+            left: 100vh;
+            height: 28vh;
+            width: 40vw;
+            visibility: hidden;
+        }
+
+        #configuracoes {
             border: solid;
             border-radius: 10px;
             border-color: var(--corHeader-Footer-Nav);
