--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <article>
             <h2>Resumo do projeto</h2>
             </article>
+            <article>
             <p>
                 O projeto trata do tema Ferramentas computacionais para apoio à sociedade em
                 relação a doenças contagiosas, pandemias, endemias, epidemias e catástrofes.
@@ -136,11 +137,10 @@
                 momentos de pandemia, quando precisa se guiar tocando nos objetos e estando exposto a
                 possíveis aglomerações.
             </p>
-            <p></p>
+            </article>            
             <article>
                 <strong>Integrantes do Grupo:</strong>
-            </article>
-            <p></p>
+            </article>            
             <ol>
                 <strong>
                     <li>Carlos Alberto da Silva</li>
