--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <script src="https://grupo4n2.github.io/speech4n2.js" type="text/javascript"></script>
-    <script src="https://grupo4n2.github.io/funcoesJS.js" type="text/javascript"></script>
+    <meta charset="utf-8" />    
     <title>Grupo 4N2 - Polo Heliópolis</title>
     <link rel="stylesheet" href="css/grupo4n2.css">
 
@@ -12,49 +10,10 @@
 
 <body>
 
-    <!-- Inserindo o Speech-4N2 em um site -->
-    <iframe id="plugin" name="plugin" scrolling="No" src="https://grupo4n2.github.io/windowSpeech4N2.html"></iframe>
-    <iframe id="configuracoes" name="configuracoes" scrolling="No" src="https://grupo4n2.github.io/configuracoes.html"></iframe>
-    <button id="botaoHabilitaPlugin" onclick="parent.habilitaPlugin(), parent.capturaTexto()"></button>
-    <input type="hidden" id="acao">
-    <style>
-        #botaoHabilitaPlugin {
-            width: 48px;
-            height: 48px;
-            background-image: url("https://grupo4n2.github.io/images/som.png");
-            background-repeat: no-repeat;
-            background-size: 48px;
-            float: right;
-            position: relative;
-            margin-top: 4px;
-        }
-
-        #plugin {
-            border: solid;
-            border-radius: 10px;
-            border-color: var(--corHeader-Footer-Nav);
-            position: fixed;
-            top: 25vw;
-            left: 100vh;
-            height: 28vh;
-            width: 40vw;
-            visibility: hidden;
-        }
-
-        #configuracoes {
-            border: solid;
-            border-radius: 10px;
-            border-color: var(--corHeader-Footer-Nav);
-            position: fixed;
-            top: 25vw;
-            left: 100vh;
-            height: 28vh;
-            width: 40vw;
-            visibility: hidden;
-        }
-    </style>
-    <!-- FIM DA INCLUSÃO DO PLUGIN -->
-
+   <!-- Inserindo o BUTTON do SpeechNet em um site -->
+   <button id="botaoHabilitaPlugin" onclick="habilitaPlugin(), capturaTexto()"></button>
+   <input type="hidden" id="acao">
+   <!-- Fim da inserção do button-->
 
     <header id="Principal">
         <h1>Projeto Integrador VIII</h1>
@@ -65,7 +24,7 @@
 
         <nav>
             <h3>Nossos links</h3>
-            <a href="https://grupo4n2.github.io" target="_blank">Speech-Grupo4N2</a>
+            <a href="https://valdevirmrib.github.io/SpeechNet/" target="_blank">SpeechNet</a>
             <a href="https://univesp.br/" target="_blank">Univesp</a>
             <a href="https://github.com" target="_blank">Github</a>
         </nav>
@@ -144,8 +103,7 @@
             <ol>
                 <strong>
                     <li>Carlos Alberto da Silva</li>
-                    <li>Carlos Eduardo Anderson</li>
-                    <li>Celso de Carvalho Junior</li>
+                    <li>Carlos Eduardo Anderson</li>                    
                     <li>Flavio Antunes de Matos</li>
                     <li>Valdevir Matos Ribeiro</li>
                     <li>Wendel Pedro de Sousa</li>
@@ -160,6 +118,14 @@
         </footer>
     </div>
 </header>
+
+ <!-- INICIO DA INCLUSÃO DO PLUGIN -->
+ <script src="https://valdevirmrib.github.io/SpeechNet/speech4n2.js" type="text/javascript"></script>
+ <script src="https://valdevirmrib.github.io/SpeechNet/funcoesJS.js" type="text/javascript"></script>
+ <iframe id="plugin" name="plugin" class="pluginIframe" scrolling="No" src="https://valdevirmrib.github.io/SpeechNet/windowSpeech4N2.html"></iframe>
+ <iframe id="configuracoes" name="configuracoes" class="pluginIframe" scrolling="No"
+     src="https://valdevirmrib.github.io/SpeechNet/configuracoes.html"></iframe>
+ <!-- FIM DA INCLUSÃO DO PLUGIN -->
 </body>
 
 </html>
