--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
    <!-- Inserindo o BUTTON do SpeechNet em um site -->
-   <button id="botaoHabilitaPlugin" onclick="habilitaPlugin(), capturaTexto()"></button>
+   <button id="botaoHabilitaPlugin" onclick="parent.habilitaPlugin(), parent.capturaTexto()"></button>
    <input type="hidden" id="acao">
    <!-- Fim da inserção do button-->
 
@@ -60,9 +60,9 @@
                 <header>
                     <h1>Acessibilidades</h1>
                 </header>
-                <a href="https://grupo4n2.github.io" target="_blank"><img src="/images/speech_4n2.png" /></a>
+                <a href="https://valdevirmrib.github.io/SpeechNet/" target="_blank"><img src="images/speech_4n2.png" /></a>
                 <a href="https://www.gov.br/governodigital/pt-br/vlibras/" target="_blank"><img
-                        src="/images/libras.png" /></a>
+                        src="images/libras.png" /></a>
 
                 <footer>
                     <article>
