--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
    <!-- Inserindo o BUTTON do SpeechNet em um site -->
-   <button id="botaoHabilitaPlugin" onclick="parent.habilitaPlugin(), parent.capturaTexto()"></button>
+   <button id="botaoHabilitaPlugin" onclick="parent.habilitaPlugin(), parent.capturaTexto()"><img src="images/som.png" /></button>
    <input type="hidden" id="acao">
    <!-- Fim da inserção do button-->
 
