--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
         </footer>
     </div>
 </header>
-
- <!-- INICIO DA INCLUSÃO DO PLUGIN -->
- <script src="https://valdevirmrib.github.io/SpeechNet/speech4n2.js" type="text/javascript"></script>
- <script src="https://valdevirmrib.github.io/SpeechNet/funcoesJS.js" type="text/javascript"></script>
- <iframe id="plugin" name="plugin" class="pluginIframe" scrolling="No" src="https://valdevirmrib.github.io/SpeechNet/windowSpeech4N2.html"></iframe>
- <iframe id="configuracoes" name="configuracoes" class="pluginIframe" scrolling="No"
-     src="https://valdevirmrib.github.io/SpeechNet/configuracoes.html"></iframe>
+ 
+ <!-- INICIO DA INCLUSÃO DO PLUGIN-->
+    <script type="text/javascript" src="https://valdevirmrib.github.io/SpeechNet/speech4n2.js"></script>
+    <script type="text/javascript" src="https://valdevirmrib.github.io/SpeechNet/funcoesJS.js"></script>
+    <iframe id="plugin" name="plugin" class="pluginIframe" scrolling="No"
+     src="https://valdevirmrib.github.io/SpeechNet/windowSpeech4N2.html"></iframe>    
+     <iframe id="configuracoes" name="configuracoes" class="pluginIframe" scrolling="No"
+        src="https://valdevirmrib.github.io/SpeechNet/configuracoes.html"></iframe>    
  <!-- FIM DA INCLUSÃO DO PLUGIN -->
 </body>
 
