--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <header>
                     <h1>Acessibilidades</h1>
                 </header>
-                <a href="https://valdevirmrib.github.io/SpeechNet/" target="_blank"><img src="images/speech_4n2.png" /></a>
+                <a href="https://valdevirmrib.github.io/SpeechNet/" target="_blank"><img src="images/" /></a>
                 <a href="https://www.gov.br/governodigital/pt-br/vlibras/" target="_blank"><img
                         src="images/libras.png" /></a>
 
