--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                 <header>
                     <h1>Acessibilidades</h1>
                 </header>
-                <a href="https://valdevirmrib.github.io/SpeechNet/" target="_blank"><img src="images/logo_speech4n2.png" /></a>
+                <a href="https://valdevirmrib.github.io/SpeechNet/" target="_blank">
+					<img src="https://valdevirmrib.github.io/SpeechNet/images/logo_speech4n2.png" /></a>
                 <a href="https://www.gov.br/governodigital/pt-br/vlibras/" target="_blank"><img
                         src="images/libras.png" /></a>
 
