--- a/index.html
+++ b/index.html
@@ -121,13 +121,12 @@
 </header>
  
  <!-- INICIO DA INCLUSÃO DO PLUGIN-->
-    <script type="text/javascript" src="https://valdevirmrib.github.io/SpeechNet/speech4n2.js"></script>
-    <script type="text/javascript" src="https://valdevirmrib.github.io/SpeechNet/funcoesJS.js"></script>
+    <script type="text/javascript" src="https://valdevirmrib.github.io/SpeechNet/speechNet.js"></script>    
     <iframe id="plugin" name="plugin" class="pluginIframe" scrolling="No"
-     src="https://valdevirmrib.github.io/SpeechNet/windowSpeech4N2.html"></iframe>    
+     src="https://valdevirmrib.github.io/SpeechNet/windowSpeechNet.html"></iframe>    
      <iframe id="configuracoes" name="configuracoes" class="pluginIframe" scrolling="No"
-        src="https://valdevirmrib.github.io/SpeechNet/configuracoes.html"></iframe>    
- <!-- FIM DA INCLUSÃO DO PLUGIN -->
+        src="https://valdevirmrib.github.io/SpeechNet/configuracoesSpeechNet.html"></iframe>
+     <!--FIM DA INCLUSÃO DO PLUGIN -->
 </body>
 
 </html>
